[project]
name = "ros2-mcp-server"
version = "0.1.0"
description = "A lightweight Model Context Protocol server for interacting with ROS2 topics via command-line tools"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "mcp[cli]>=1.18.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.1",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E203"]
